# OpenGLGradientGenerator

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: github-actions.yml
include/glad/: glad.h
src/: glad.c  main.cpp
